<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_navy"
    tools:context=".Activities.IntroActivity">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">
          <androidx.constraintlayout.widget.ConstraintLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent">
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="CinemaXPlay"
                  android:textSize="50sp"
                  android:textStyle="bold"
                  android:layout_marginTop="12dp"
                  android:textColor="@color/main_navy"
                  android:background="@drawable/textview_background"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent"/>
              <ImageView
                  android:id="@+id/imageView"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:scaleType="centerCrop"
                  android:src="@drawable/into_img"
                  android:alpha="0.3"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toTopOf="parent" />

              <ImageView
                  android:id="@+id/imageView2"
                  android:layout_width="0dp"
                  android:layout_height="100dp"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  tools:src="@drawable/gradient_background" />
          </androidx.constraintlayout.widget.ConstraintLayout>
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="8dp"
              android:layout_marginStart="24dp"
              android:layout_marginEnd="24dp"
              android:orientation="vertical">
              <TextView
                  android:id="@+id/textView1"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/discover_your"
                  android:textColor="@color/white"
                  android:textSize="30sp"/>
              <TextView
                  android:id="@+id/textView2"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/favourite_show"
                  android:textColor="@color/light_blue"
                  android:textSize="30sp"/>
              <TextView
                  android:id="@+id/textView3"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/WatchOption"
                  android:textColor="@color/white"
                  android:textSize="30sp"/>
              <TextView
                  android:id="@+id/textView4"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/description"
                  android:textColor="@color/grey"
                  android:textSize="25sp"/>

              <androidx.appcompat.widget.AppCompatButton
                  android:id="@+id/getStarted_button"
                  style="@android:style/Widget.Button"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="8dp"
                  android:text="@string/get_started"
                  android:textColor="@color/white"
                  android:textSize="18sp"
                  android:background="@drawable/button_background"/>


          </LinearLayout>


      </LinearLayout>
  </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>